[package]
name = "aserial"
version = "1.0.0"
authors = ["Kamil Koczurek <koczurekk@gmail.com>"]
edition = "2018"

[dependencies]
cpal = "^0.10"
toml = "^0.5"
rodio = "^0.10"
rustfft = "^3.0"
minifb = "^0.13"
kittyfb = "^0.1"
serde = { version = "^1.0", features = ["derive"] }
plotters = { version = "^0.2", features = ["bitmap"] }

[patch.crates-io]
font-kit = { path = "./font-kit/" }
